--- a/P_sets/p_sets/c1-s1_3-ps08-14.html
+++ b/P_sets/p_sets/c1-s1_3-ps08-14.html
@@ -1,10 +1,10 @@
 <html>
-	<table style="padding:10 20 0 0">
+	<table class="pt10_r20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">08.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_zero">08.</td>
+			<td class="vtop_lten">
 				In how many ways can a gambler draw five cards from a standard deck and get 
-				<ol type="a" style="margin:5 0 5 10; padding:0 0 0 20">
+				<ol type="a" class="C1_sec1.3_p08">
 					<li>a flush (five cards of the same suit)?</li>
 					<li>four aces?</li> 
 					<li>four of a kind?</li>
@@ -17,31 +17,31 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:20 20 0 0">
+	<table class="pt20_r20">
 		<tr>
-        	<td style="vertical-align:top; padding:0 0 0 0">09.</td>
-        	<td style="vertical-align:top; padding:0 0 0 10">
+        	<td class="vtop_zero">09.</td>
+        	<td class="vtop_lten">
         		How many bytes contain
-				<p style="margin:10 0 0 0">
+				<p class="pt10">
 					(a) exactly two 1s &nbsp;&nbsp;&nbsp; (b) exactly four 1s &nbsp;&nbsp;&nbsp; (c) exactly six 1s &nbsp;&nbsp;&nbsp; (d) at least two 1s?
 				</p>
         	</td>
       	</tr>
     </table>
-    <table style="padding:20 20 0 0">
+    <table class="pt20_r20">
       	<tr>
-        	<td style="vertical-align:top; padding:0 0 0 0">10.</td>
-        	<td style="vertical-align:top; padding:0 0 0 10">
+        	<td class="vtop_zero">10.</td>
+        	<td class="vtop_lten">
         		How many ways are there to pick a five&ndash;person basketball team from twelve possible players? How many selections include the weakest and the strongest players?
         	</td>
       	</tr>
 	</table>
-	<table style="padding:20 20 0 0">
+	<table class="pt20_r20">
       	<tr>
-        	<td style="vertical-align:top; padding:0 0 0 0">11.</td>
-        	<td style="vertical-align:top; padding:0 0 0 10">
+        	<td class="vtop_zero">11.</td>
+        	<td class="vtop_lten">
         		A student is to answer seven out of ten questions on an examination. In how many ways can they make their selection if
-        		<ol type="a" style="margin:5 0 5 10; padding:0 0 0 20">
+        		<ol type="a" class="C1_sec1.3_p08">
 					<li>there are no resrictions?</li>
 					<li>they <u>must</u> answer the first two questions?</li> 
 					<li>they must answer at least four of the six first questions?</li>
@@ -49,12 +49,12 @@
         	</td>
       	</tr>
 	</table>
-	<table style="padding:20 20 0 0">
+	<table class="pt20_r20">
       	<tr>
-        	<td style="vertical-align:top; padding:0 0 0 0">12.</td>
-        	<td style="vertical-align:top; padding:0 0 0 10">
+        	<td class="vtop_zero">12.</td>
+        	<td class="vtop_lten">
         		In how many ways can twelve different books be distributed among four children so that
-        		<ol type="a" style="margin:5 0 5 10; padding:0 0 0 20">
+        		<ol type="a" class="C1_sec1.3_p08">
 					<li>each child gets three books?</li>
 					<li>the two oldest children get four books each and two youngest get two books each?</li> 
 					<li>they must answer at least four of the six first questions?</li>
@@ -62,18 +62,18 @@
         	</td>
       	</tr>
 	</table>
-	<table style="padding:20 20 0 0">
+	<table class="pt20_r20">
       	<tr>
-        	<td style="vertical-align:top; padding:0 0 0 0">13.</td>
-        	<td style="vertical-align:top; padding:0 0 0 10">
+        	<td class="vtop_zero">13.</td>
+        	<td class="vtop_lten">
         		How many arrangments of the letters in MISSISSIPPI have no consecutive Ss?
         	</td>
       	</tr>
 	</table>
-	<table style="padding:20 20 10 0">
+	<table class="pt20_r20_b10">
       	<tr>
-        	<td style="vertical-align:top; padding:0 0 0 0">14.</td>
-        	<td style="vertical-align:top; padding:0 0 0 10">
+        	<td class="vtop_zero">14.</td>
+        	<td class="vtop_lten">
         		A gym coach must select eleven seniors to play on a football team. If they can make their selection in 12,376 ways, how many seniors are eligible to play?
         	</td>
       	</tr>
