--- a/P_sets/p_sets/c1-s1_3-ss04-07.html
+++ b/P_sets/p_sets/c1-s1_3-ss04-07.html
@@ -1,8 +1,8 @@
 <html>
-	<table style="padding:0 20 0 0">
+	<table class="pr_20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">04.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_zero">04.</td>
+			<td class="vtop_lten">
 				For part (a), we need to consider the boundary conditions. That is to say, a symbol requires at least one raised dot, and all raised dots constitute a valid symbol. Hence,
 				<p>
 					$
@@ -14,11 +14,11 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:30 20 0 0">
+	<table class="pt30_r20">
 		<tr>
-			<td style="vertical-align:top; padding:9 0 0 00">05.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
-				<ol type="a" style="padding:0 0 0 20">
+			<td class="vtop_t9">05.</td>
+			<td class="vtop_lten">
+				<ol type="a" class="pl_20">
 					<li>One can produce $P(5,3)=\displaystyle\frac{5!}{(5-3)!}=\frac{5!}{2!}=5\cdot4\cdot3=60$ permutations. $\square$</li>
 					<li>
 						There are $\displaystyle{5 \choose 3}=\frac{5!}{3!(5-3)!}=\frac{5!}{3!2!}=10$ such combinations. $\square$ They are:
@@ -33,10 +33,10 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:20 20 0 0">
+	<table class="pt20_r20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">06.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_zero">06.</td>
+			<td class="vtop_lten">
 				$\forall n > 1, \text{we have}$
 				$$
 				\begin{equation}
@@ -59,17 +59,17 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:10 20 10 0">
+	<table class="p_t10_r20_b10">
 		<tr>
-			<td style="vertical-align:top; padding:13 0 0 00">07.</td>
-			<td style="vertical-align:top; padding:00 0 0 10">
+			<td class="vtop_t13">07.</td>
+			<td class="vtop_lten">
 				<table>
 					<tr>
-						<td style="padding:0 0 0 00">(a) $\text{S}_1=\displaystyle{20 \choose 12}. \ \square$</td>
-						<td style="padding:0 0 0 25">(b) $\text{S}_2=\displaystyle{10 \choose 6}{10 \choose 6}. \ \square$</td>
+						<td class="p_zero">(a) $\text{S}_1=\displaystyle{20 \choose 12}. \ \square$</td>
+						<td class="pl_25">(b) $\text{S}_2=\displaystyle{10 \choose 6}{10 \choose 6}. \ \square$</td>
 					</tr>
 				</table>
-				<p style="margin:10 0 0 0">
+				<p class="mar_t10">
 					$
 					\begin{equation}
 						\begin{split}
@@ -81,7 +81,7 @@
 					\end{equation}
 					$
 				</p>
-				<p style="margin:10 0 0 0">
+				<p class="mar_t10">
 					$
 					\begin{equation}
 						\begin{split}
@@ -94,7 +94,7 @@
 					\end{equation}
 					$
 				</p>
-				<p style="margin:10 0 0 0">
+				<p class="mar_t10">
 					$
 					\begin{equation}
 						\begin{split}
