--- a/P_sets/p_sets/c1-s1_3-ss08-14.html
+++ b/P_sets/p_sets/c1-s1_3-ss08-14.html
@@ -1,8 +1,8 @@
 <html>
-	<table style="padding:0 20 0 0">
+	<table class="pr_20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">yy.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_zero">yy.</td>
+			<td class="vtop_lten">
 				Lorem ipsum...
 			</td>
 		</tr>
