--- a/P_sets/p_sets/c1_ps10-13-0.html
+++ b/P_sets/p_sets/c1_ps10-13-0.html
@@ -1,20 +1,18 @@
 <html>
-	<body>
-		<table style="padding: 10 20 0 0">
-			<tr>
-				<td style="vertical-align:top; padding: 0 0 0 00">10.</td>
-				<td style="vertical-align:top; padding: 0 0 0 10">
-					Pamela has 15 different books. In how many ways can she place her books on two shelves so that there is at least one book on each shelf? (Consider the books in each arrangement to be stacked one next to each other, with the first book on each shelf at the left of the shelf.)
-				</td>
-			</tr>
-		</table>
-		<table style="padding: 20 20 0 0">
-		    <tr>
-		    	<td style="vertical-align:top; padding: 0 0 0 0">11.</td>
-		    	<td style="vertical-align:top; padding: 0 0 0 10">
-		        	Three small towns designated by A, B, and C are interconnected by a system of two-way roads, as shown in the figure below.
-		      	</td>
-		    </tr>
-		</table>
-	</body>
+	<table class="pt10_r20">
+		<tr>
+			<td class="vtop_zero">10.</td>
+			<td class="vtop_lten">
+				Pamela has 15 different books. In how many ways can she place her books on two shelves so that there is at least one book on each shelf? (Consider the books in each arrangement to be stacked one next to each other, with the first book on each shelf at the left of the shelf.)
+			</td>
+		</tr>
+	</table>
+	<table class="pt20_r20">
+	    <tr>
+	    	<td class="vtop_zero">11.</td>
+	    	<td class="vtop_lten">
+	        	Three small towns designated by A, B, and C are interconnected by a system of two-way roads, as shown in the figure below.
+	      	</td>
+	    </tr>
+	</table>
 </html>
