--- a/P_sets/p_sets/c1_ps10-13-1.html
+++ b/P_sets/p_sets/c1_ps10-13-1.html
@@ -1,43 +1,41 @@
 <html>
-	<body>
-		<table style="padding:0 40 0 40">
-			<tr>
-				<td style="vertical-align:top; padding: 0 0 0 0">(a)</td>
-				<td style="vertical-align:top; padding: 0 0 0 10">
-					In how many ways can Linda travel from town A to town C?
-				</td>
-			</tr>
-			<tr>
-				<td style="vertical-align:top; padding: 0 0 0 0">(b)</td>
-				<td style="vertical-align:top; padding: 0 0 0 10">
-					How many different round trips can Linda travel from town A to town C and back to town A?
-				</td>
-			</tr>
-			<tr>
-				<td style="vertical-align:top; padding: 0 0 0 0">(c)</td>
-				<td style="vertical-align:top; padding: 0 0 0 10">
-					How many of the round trips in part (b) are such that the return trip (from town C to town A) is at least partially different from the route Linda takes from town A to town C? (For example, if Linda travels from town A to town C along roads R1 and R6, then on her return she might take roads R6 and R3, or R7 and R2, or road R9, among other possibilities, but she does <em>not</em> travel on roads R6 <em>and</em> R1.)
-				</td>
-			</tr>
-		</table>
-		<table style="padding: 20 20 0 0">
-		    <tr>
-		    	<td style="vertical-align:top; padding: 0 0 0 0">12.</td>
-		    	<td style="vertical-align:top; padding: 0 0 0 10">
-		    		List all the permutations for the letters: a, c, t.
-		    	</td>
-		    </tr>
-		</table>
-		<table style="padding: 20 20 0 0">
-		    <tr>
-		    	<td style="vertical-align:top; padding: 0 0 0 0">13.</td>
-		    	<td style="vertical-align:top; padding: 0 0 0 10">
-		    		<ol type="a" style="padding:0 10 0 20">
-		    			<li>How many permutations are there for the eight letters: a, c, f, g, i, t, w, x?</li>
-		    			<li>Consider the permutations in (a). How many start with the letter: t? How many start with the letter: t, and end with the letter: c?</li>
-		    		</ol>
-		    	</td>
-		    </tr>
-		</table>
-	</body>
+	<table class="p_r40_l40">
+		<tr>
+			<td class="vtop_zero">(a)</td>
+			<td class="vtop_lten">
+				In how many ways can Linda travel from town A to town C?
+			</td>
+		</tr>
+		<tr>
+			<td class="vtop_zero">(b)</td>
+			<td class="vtop_lten">
+				How many different round trips can Linda travel from town A to town C and back to town A?
+			</td>
+		</tr>
+		<tr>
+			<td class="vtop_zero">(c)</td>
+			<td class="vtop_lten">
+				How many of the round trips in part (b) are such that the return trip (from town C to town A) is at least partially different from the route Linda takes from town A to town C? (For example, if Linda travels from town A to town C along roads R1 and R6, then on her return she might take roads R6 and R3, or R7 and R2, or road R9, among other possibilities, but she does <em>not</em> travel on roads R6 <em>and</em> R1.)
+			</td>
+		</tr>
+	</table>
+	<table class="pt20_r20">
+	    <tr>
+	    	<td class="vtop_zero">12.</td>
+	    	<td class="vtop_lten">
+	    		List all the permutations for the letters: a, c, t.
+	    	</td>
+	    </tr>
+	</table>
+	<table class="pt20_r20">
+	    <tr>
+	    	<td class="vtop_zero">13.</td>
+	    	<td class="vtop_lten">
+	    		<ol type="a" class="r10_l20">
+	    			<li>How many permutations are there for the eight letters: a, c, f, g, i, t, w, x?</li>
+	    			<li>Consider the permutations in (a). How many start with the letter: t? How many start with the letter: t, and end with the letter: c?</li>
+	    		</ol>
+	    	</td>
+	    </tr>
+	</table>
 </html>
