--- a/P_sets/p_sets/c1_ss1-5.html
+++ b/P_sets/p_sets/c1_ss1-5.html
@@ -1,24 +1,24 @@
 <html>
-	<table style="padding:0 20 0 0">
+	<table class="pr_20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">01.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_zero">01.</td>
+			<td class="vtop_lten">
 				<table style="margin:-1 0 0 0">
 					<tr>
-						<td style="vertical-align:top; padding:0 0 0 00">a)</td>
-						<td style="vertical align:top; padding:0 0 0 10">
+						<td class="vtop_zero">a)</td>
+						<td class="vtop_lten">
 							By the rule of sum, there are $8+5=13$ possibilities for the eventual winner. $\square$
 						</td>
 					</tr>
 					<tr>
-						<td style="vertical-align:top; padding:0 0 0 00">b)</td>
-						<td style="vertical-align:top; padding:0 0 0 10">
+						<td class="vtop_zero">b)</td>
+						<td class="vtop_lten">
 							For pairs of opposing candidates, there are $8\times5=40$ possible choices by the rule of product. $\square$
 						</td>
 					</tr>
 					<tr>
 						<td>c)</td>
-						<td style="padding:0 0 0 10">
+						<td class="pl_10">
 							(a): Rule of sum; (b): Rule of product. $\square$
 						</td>
 					</tr>
@@ -26,30 +26,30 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:20 0 0 0">
+	<table class="pt_20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">02.</td>
-			<td style="vertical-align:top; padding:1 0 0 10">
+			<td class="vtop_zero">02.</td>
+			<td class="vtop_lten">
 				With repetitions allowed, we have
 				$\text{N}=5\times5\times5\times5\times5\times5=5^6. \ \square$
 			</td>
 		</tr>
 	</table>
-	<table style="padding:20 0 0 0">
+	<table class="pt_20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">03.</td>
-			<td style="vertical-align:top; padding:1 0 0 10">
+			<td class="vtop_zero">03.</td>
+			<td class="vtop_lten">
 				Using set notation to model this situation, we have $\text{B}_\text{A}=\{4\text{M}, 12\text{C}, 3\text{E}_\text{S}, 2\text{T}_\text{T}\}.$
 				<table>
 					<tr>
-						<td style="vertical-align:top; padding:0 0 0 00">(a)</td>
-						<td style="vertical-align:top; padding:0 0 0 10">
+						<td class="vtop_zero">(a)</td>
+						<td class="vtop_lten">
 							By the rule of product, $d\big(\text{B}_\text{A}\big)=4\times12\times3\times2=288. \ \square$
 						</td>
 					</tr>
 					<tr>
-						<td style="vertical-align:top; padding:0 0 0 00">(b)</td>
-						<td style="vertical-align:top; padding:0 0 0 10">
+						<td class="vtop_zero">(b)</td>
+						<td class="vtop_lten">
 							Given blue as a definite specification, there are $b\big(\text{B}_\text{A}\big)=4\times1\times3\times2=24$
 							<br>
 							such vehicles available for purchase. $\square$
@@ -59,20 +59,20 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:20 0 0 0">
+	<table class="pt_20">
 		<tr>
-			<td style="vertical-align:top">04.</td>
-			<td style="padding:1 20 0 10">
+			<td class="vtop_zero">04.</td>
+			<td class="p120010">
 				Let the new slate of company officers be denoted as $\text{CO}=\{\text{P}, \text{VP}, \text{S}, \text{T}\}.$
 				<table>
 					<tr>
-						<td style="vertical-align:top; padding:0 0 0 00">(a)</td>
-						<td style="vertical-align:top; padding:0 0 0 10">
+						<td class="vtop_zero">(a)</td>
+						<td class="vtop_lten">
 							By the rule of product, $\text{S}_{d}\big(\text{CO}\big)=10\times9\times8\times7=P(10,4)=5040. \ \square$
 						</td>
 					</tr>
 					<tr>
-						<td style="vertical-align:top">(b)</td>
+						<td class="vtop_zero">(b)</td>
 						<td>
 							<ol type="i">
 								<li>
@@ -95,10 +95,10 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:0 0 0 0">
+	<table class="pt10">
 		<tr>
-			<td style="vertical-align:top">05.</td>
-			<td style="padding:1 20 0 10">
+			<td class="vtop_zero">05.</td>
+			<td class="p120010">
 				We know that the license plate consists of two letters followed by four digits. Given the wittness information provided, we know there are two possibilities for the first letter, two possibilities for the second letter, one possibility for the first digit, and two possibilities four the fourth digit. By the rule of product, the police will have to check out $2 \times 2 \times 1 \times 10 \times 10 \times 2 = 800$ license plates. $\square$
 			</td>
 		</tr>
