--- a/P_sets/p_sets/c1_ss19-23.html
+++ b/P_sets/p_sets/c1_ss19-23.html
@@ -1,8 +1,8 @@
 <html>
-	<table style="padding:0 20 0 0">
+	<table class="pr_20">
 		<tr>
-			<td style="vertical-align:top; padding: 0 0 0 00">19.</td>
-			<td style="vertical-align:top; padding: 0 0 0 10">
+			<td class="vtop_zero">19.</td>
+			<td class="vtop_lten">
 				We can compute these answers directly, as follows.
 				<ol type="a">
 					<li>$7!=5040. \ \square$</li>
@@ -13,10 +13,10 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:0 20 0 0">
+	<table class="pr_20">
 		<tr>
-			<td style="vertical-align:top; padding: 0 0 0 00">20.</td>
-			<td style="vertical-align:top; padding: 0 0 0 10">
+			<td class="vtop_zero">20.</td>
+			<td class="vtop_lten">
 				Again, a straight&ndash;forward computation of permutations with duplicate symbols:
 				<ol type="a">
 					<li>Since the symbol A is repeated three times, we have $8!/(3!1!1!1!1!1!)=6720. \ \square$</li>
@@ -27,11 +27,11 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:0 20 0 0">
+	<table class="pr_20">
 		<tr>
-			<td style="vertical-align:top; padding: 0 0 0 00">21.</td>
-			<td style="vertical-align:top; padding: 0 0 0 10">
-				<ol type="a" style="vertical-align:top; padding: 0 0 0 20">
+			<td class="vtop_zero">21.</td>
+			<td class="vtop_lten">
+				<ol type="a" class="vtop_l20">
 					<li>
 						$\text{SOCIOLOGICAL = SOOOCCIILLGA}$. Hence, there are $12!/(3!2!2!2!1!1!1!)$ arrangements. $\square$
 					</li>
@@ -45,10 +45,10 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:0 20 0 0">
+	<table class="pr_20">
 		<tr>
-			<td style="vertical-align:top; padding: 0 0 0 00">22.</td>
-			<td style="vertical-align:top; padding: 0 0 0 10">
+			<td class="vtop_zero">22.</td>
+			<td class="vtop_lten">
 				Effectively, we are considering the integer $n=x_1x_2 \dots x_m > 5,000,000$.
 				<ol type="a">
 					<li>$[x_1:5] \ \rightarrow \ (6!)/(2!). \ \square$</li>
@@ -59,14 +59,14 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:15 20 10 0">
+	<table class="t15_r20_b10">
 		<tr>
-			<td style="vertical-align:top; padding: 0 0 0 00">23.</td>
-			<td style="vertical-align:top; padding: 0 0 0 10">
+			<td class="vtop_zero">23.</td>
+			<td class="vtop_lten">
 				We are looking for the number of ways to arrange twelve objects &mdash; 4 of the first type, 3 of the second, 2 of the third, and 3 of the fourth. There are $12!/(4!3!2!3!)=277,200$ possible ways. $\square$
 				<p>
 					<span style="color:grey">+</span> An interesting layer of complexity &ndash;worth introducing&ndash; would be to require an ordering of type, e.g., 
-					<p style="margin:-5px 0 0 0">
+					<p class="mar_tn5">
 						<code class="code_block">
 							[T<sub>1</sub>: R<sub>(3,4)</sub>, R<sub>2</sub>, R<sub>1</sub>]; [T<sub>3</sub>: ... ]; [T<sub>4</sub>: ... ]; [T<sub>2</sub>: ... ]
 						</code>
