--- a/P_sets/p_sets/c1_ss24-29.html
+++ b/P_sets/p_sets/c1_ss24-29.html
@@ -1,11 +1,9 @@
 <html>
-	<p style="font-size:16; margin:2 20 0 0">
-		Problem 24 constitutes a first example of a combinatorial proof asked to be given by the reader. Combinatorial proofs involve counting.
-	</p>
-	<table style="padding:10 20 0 0">
+	<div class="p24">Problem 24 constitutes a first example of a combinatorial proof asked to be given by the reader. Combinatorial proofs involve counting.</div>
+	<table class="pt10_r20">
 		<tr>
-			<td style="vertical-align:top; padding:12 0 0 00">24.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_t12">24.</td>
+			<td class="vtop_lten">
 				$
 				\begin{equation}
 					\begin{split}
@@ -21,14 +19,14 @@
 			</td>
 		</tr>
 	</table>
-	 <table style="padding:20 20 0 0">
+	 <table class="pt20_r20">
 		<tr>
-			<td style="vertical-align:top; padding:10 0 0 00">25.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
-				<table style="padding:0 0 0 0">
+			<td class="vtop_t10">25.</td>
+			<td class="vtop_lten">
+				<table>
 					<tr>
-						<td style="vertical-align:top; padding:8 0 0 00">a)</td>
-						<td style="vertical-align:top; padding:0 0 0 10">
+						<td class="vtop_t8">a)</td>
+						<td class="vtop_lten">
 							$
 							\begin{equation}
 								\begin{split}
@@ -47,8 +45,8 @@
 						</td>
 					</tr>
 					<tr>
-						<td style="vertical-align:top; padding:0 0 0 00">b)</td>
-						<td style="vertical-align:top; padding:6 0 0 10">
+						<td class="vtop_zero">b)</td>
+						<td class="vtop_t6_l10">
 							$
 							\begin{equation}
 								\begin{split}
@@ -68,8 +66,8 @@
 						</td>
 					</tr>
 					<tr>
-						<td style="vertical-align:top; padding:0 0 0 00">c)</td>
-						<td style="vertical-align:top; padding:6 0 10 10">
+						<td class="vtop_zero">c)</td>
+						<td class="vtop_t6_b10_l10">
 							$
 							\begin{equation}
 								\begin{split}
@@ -96,14 +94,14 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:20 20 0 0">
+	<table class="pt20_r20">
 		<tr>
-			<td style="vertical-align:top; padding: 0 0 0 00">26.</td>
-			<td style="vertical-align:top; padding: 0 0 0 10">
+			<td class="vtop_zero">26.</td>
+			<td class="vtop_lten">
 				For $(0,0) \rightarrow (7,7),$ two such paths may look like the following:
-				<table style="vertical-align:top; padding:0 20 9 0">
+				<table class="p_r20b10">
 					<tr>
-						<td style="vertical-align:top; padding:0 0 0 0">
+						<td class="vtop_zero">
 							<canvas id="myCanvas" width="221" height="185"></canvas>
 						    <script>
 						        var canvas = document.getElementById('myCanvas');
@@ -195,7 +193,7 @@
 						    <br>
 							<span style="padding:0 0 0 110px">(a)</span>
 						</td>
-						<td style="vertical-align:top; padding:0 0 0 40">
+						<td class="vtop_l40">
 							<canvas id="canv2" width="221" height="185"></canvas>
 						    <script>
 						        var canvas = document.getElementById('canv2');
@@ -291,7 +289,7 @@
 						        context.fillRect(13.5, 156.3, 3, 3);
 						        context.fillRect(216.7, 8.4, 3, 3);
 						    </script>
-						    <span style="padding:12 0 0 110px">(b)</span>
+						    <span style="padding:12 0 0 110">(b)</span>
 						</td>
 					</tr>
 				</table>
@@ -301,12 +299,12 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:20 20 0 0">
+	<table class="pt20_r20">
 		<tr>
-			<td style="vertical-align:top; padding: 0 0 0 00">27.</td>
-			<td style="vertical-align:top; padding: 0 0 0 10">
+			<td class="vtop_zero">27.</td>
+			<td class="vtop_lten">
 				I've plotted and labeled both situations, (a) and (b), in the coordinate system below.
-				<img src="c1_p27.png" style="padding:10 0 0 50">
+				<img src="c1_p27.png" class="pt10_l50">
 				<ol type="a">
 					<li>
 						Each path consits of 2 horizontal, 1 vertical, and 7 axial moves. Hence, there are $10!/(2!1!7!)$ ways to arrange these 10 moves, which yields the number of paths. $\square$
@@ -321,11 +319,11 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:5 20 0 0">
+	<table class="p_t5_r20">
 		<tr>
-			<td style="vertical-align:top; padding: 0 0 0 00">28.</td>
-			<td style="vertical-align:top; padding: 0 0 0 10">
-				<ol type="a" style="padding: 0 0 0 20">
+			<td class="vtop_zero">28.</td>
+			<td class="vtop_lten">
+				<ol type="a" class="p_l20">
 					<li>
 						The <code><b>for</b></code> loop for $i$ is executed $(12-1)+1=12$ times, while those for $j$ and $k$ are executed $(10-5)+1=6,$ and $(15-8)+1=8$ times, respectively. Consequently, the given script will return a value of <code>counter</code> equal to $$0+12(1)+6(2)+8(3)=48. \ \square$$
 					</li>
@@ -339,10 +337,10 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:5 20 15 0">
+	<table class="t5_r20_b15">
 		<tr>
-			<td style="vertical-align:top; padding: 0 0 0 00">29.</td>
-			<td style="vertical-align:top; padding: 0 0 0 10">
+			<td class="vtop_zero">29.</td>
+			<td class="vtop_lten">
 				(a) and (b): Again, the script defines three distinct tasks. By the rule of product, the <code>print</code> statement is executed $8\cdot6\cdot12=576$ times. $\square$
 			</td>
 		</tr>
