--- a/P_sets/p_sets/c1_ss30-36.html
+++ b/P_sets/p_sets/c1_ss30-36.html
@@ -127,7 +127,7 @@
 				<ol type="a" class="pl_20">
 					<li>
 						If arrangements are considered to be the same when one can be obtained from the other by rotation, then we have
-						<div style="padding:08 0 10 0">
+						<div class="t8_b10">
 							<canvas id="myCanvas4" width="500" height="140"></canvas>
 						    <script>
 						    	var canvas = document.getElementById('myCanvas4');
