--- a/P_sets/p_sets/repo_title.html
+++ b/P_sets/p_sets/repo_title.html
@@ -1,1 +1,1 @@
-<html>Discrete and Combinatorial Mathematics<br><span style="font-size:16px">An Applied Introduction / 5E_PS</span><br>&#9634; <span style="font-size:12px">RALPH P. GRIMALDI</span></html>
+<html>Discrete and Combinatorial Mathematics<br><span class="fnt_16">An Applied Introduction / 5E_PS</span><br>&#9634; <span class="fnt_12">RALPH P. GRIMALDI</span></html>
