--- a/P_sets/p_sets/c1_ss14-18-0.html
+++ b/P_sets/p_sets/c1_ss14-18-0.html
@@ -1,10 +1,10 @@
 <html>
-	<table style="padding:0 20 0 0">
+	<table class="pr_20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">14.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_zero">14.</td>
+			<td class="vtop_lten">
 				Using the definition of permutation, we have
-				<ol type="a" style="padding:0 0 0 20">
+				<ol type="a" class="pl_20">
 					<li>$P(7,2)=7!/(7-2)!=7!/5!=(7)(6)=42. \ \square$</li>
 					<li>$P(8,4)=8!/(8-4)!=8!/4!=(8)(7)(6)(5)=1680. \ \square$</li>
 					<li>$P(10,7)=10!/(10-7)!=10!/3!=(10)(9)(7)(6)(5)(4)=604,800. \ \square$</li>
@@ -13,34 +13,30 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:0 20 0 0">
+	<table class="pr_20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">15.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_zero">15.</td>
+			<td class="vtop_lten">
 				To solve this, we may place <code>a,b,c,d</code> in the respective positions denoted by <code>x</code>, that is, <code>e x e x e x e x e</code>. By the rule of product, there are $4!$ such arrangements. $\square$
 			</td>
 		</tr>
 	</table>
-	<table style="padding:20 0 0 0">
+	<table class="pt_20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">16.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
-				<ol type="a" style="padding:0 0 0 20">
+			<td class="vtop_zero">16.</td>
+			<td class="vtop_lten">
+				<ol type="a" class="pl_20">
 					<li>With repetitions allowed, there are $40^{25}$ unique messages. $\square$</li>
 					<li>By the rule of product, there are $40\cdot30\cdots30\cdot40=(40^2)(30^{23})$ messages. $\square$</li>
 				</ol>
 			</td>
 		</tr>
 	</table>
-	<table style="padding:5 20 0 0">
+	<table class="p_t5_r20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">17.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
-				<ul style="list-style-type:none; padding:0 0 0 0">
-					<li>
-						(Note: I've replaced the word "class" with the more contemporary notion of "type", i.e., I'll be considering the address types A, B, and C). This situation may be modeled as follows:
-					</li>
-				</ul>
+			<td class="vtop_zero">17.</td>
+			<td class="vtop_lten">
+				(Note: I've replaced the word "class" with the more contemporary notion of "type", i.e., I'll be considering the address types A, B, and C). This situation may be modeled as follows:
 			</td>
 		</tr>
 	</table>
