--- a/P_sets/p_sets/c1_ss14-18-1.html
+++ b/P_sets/p_sets/c1_ss14-18-1.html
@@ -1,9 +1,9 @@
 <html>
-	<table style="padding:0 20 0 20">
+	<table class="pr_20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00"></td>
-			<td style="vertical-align:top; padding:0 0 0 10">
-				<ul style="list-style-type:none; padding:0 0 0 0">
+			<td class="vtop_zero"></td>
+			<td class="vtop_zero">
+				<ul style="list-style-type:none">
 					<li>
 						hence,
 						<br>
@@ -17,10 +17,10 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:10 20 10 0">
+	<table class="p_t10_r20_b10">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">18.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_zero">18.</td>
+			<td class="vtop_lten">
 				From the rule of product, we learn that Morgan has $7\cdot4\cdot3\cdot6=504$ unique configurations available to her. $\square$
 			</td>
 		</tr>
